--- a/index.html
+++ b/index.html
@@ -3,43 +3,130 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Market Dashboard</title>
+  <title>US Indices Dashboard</title>
   <style>
     body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
     .wrap { padding: 16px; }
     h1 { font-size: 18px; margin: 0 0 12px; }
     .grid { display: grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 12px; }
-    .card { border: 1px solid #ddd; border-radius: 12px; padding: 12px; }
-    .label { font-size: 12px; opacity: 0.7; }
-    .value { font-size: 20px; font-weight: 700; margin-top: 6px; }
-    .note { font-size: 12px; opacity: 0.7; margin-top: 10px; }
-    @media (max-width: 900px) { .grid { grid-template-columns: 1fr; } }
+    .card { border: 1px solid rgba(255,255,255,.12); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.04); }
+    .card .title { padding: 10px 12px; font-size: 13px; opacity: .85; border-bottom: 1px solid rgba(255,255,255,.08); }
+    .tv { height: 360px; }
+    @media (max-width: 1000px) { .grid { grid-template-columns: 1fr; } .tv { height: 320px; } }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <h1>📈 US Indices (Embed용)</h1>
+    <h1>📈 US Indices</h1>
 
-    <!-- 여기에 위젯(TradingView/Investing) 또는 API 결과를 넣을 수 있음 -->
     <div class="grid">
       <div class="card">
-        <div class="label">NASDAQ (예시)</div>
-        <div class="value">—</div>
-        <div class="note">여기에 위젯/값을 연결하면 자동 업데이트</div>
+        <div class="title">NASDAQ Composite</div>
+        <div class="tv">
+          <div class="tradingview-widget-container" style="height:100%;width:100%">
+            <div class="tradingview-widget-container__widget" style="height:100%;width:100%"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+            {
+              "symbols": [["NASDAQ:IXIC|1D"]],
+              "chartOnly": false,
+              "width": "100%",
+              "height": "100%",
+              "locale": "en",
+              "colorTheme": "dark",
+              "autosize": true,
+              "showVolume": true,
+              "showMA": false,
+              "hideDateRanges": false,
+              "hideMarketStatus": false,
+              "hideSymbolLogo": false,
+              "scalePosition": "right",
+              "scaleMode": "Normal",
+              "fontFamily": "system-ui",
+              "fontSize": "12",
+              "noTimeScale": false,
+              "valuesTracking": "1",
+              "changeMode": "price-and-percent",
+              "lineWidth": 2
+            }
+            </script>
+          </div>
+        </div>
       </div>
+
       <div class="card">
-        <div class="label">S&P 500 (예시)</div>
-        <div class="value">—</div>
-        <div class="note">여기에 위젯/값을 연결하면 자동 업데이트</div>
+        <div class="title">S&P 500</div>
+        <div class="tv">
+          <div class="tradingview-widget-container" style="height:100%;width:100%">
+            <div class="tradingview-widget-container__widget" style="height:100%;width:100%"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+            {
+              "symbols": [["SP:SPX|1D"]],
+              "chartOnly": false,
+              "width": "100%",
+              "height": "100%",
+              "locale": "en",
+              "colorTheme": "dark",
+              "autosize": true,
+              "showVolume": true,
+              "showMA": false,
+              "hideDateRanges": false,
+              "hideMarketStatus": false,
+              "hideSymbolLogo": false,
+              "scalePosition": "right",
+              "scaleMode": "Normal",
+              "fontFamily": "system-ui",
+              "fontSize": "12",
+              "noTimeScale": false,
+              "valuesTracking": "1",
+              "changeMode": "price-and-percent",
+              "lineWidth": 2
+            }
+            </script>
+          </div>
+        </div>
       </div>
+
       <div class="card">
-        <div class="label">Dow Jones (예시)</div>
-        <div class="value">—</div>
-        <div class="note">여기에 위젯/값을 연결하면 자동 업데이트</div>
+        <div class="title">Dow Jones (DJIA)</div>
+        <div class="tv">
+          <div class="tradingview-widget-container" style="height:100%;width:100%">
+            <div class="tradingview-widget-container__widget" style="height:100%;width:100%"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+            {
+              "symbols": [["TVC:DJI|1D"]],
+              "chartOnly": false,
+              "width": "100%",
+              "height": "100%",
+              "locale": "en",
+              "colorTheme": "dark",
+              "autosize": true,
+              "showVolume": true,
+              "showMA": false,
+              "hideDateRanges": false,
+              "hideMarketStatus": false,
+              "hideSymbolLogo": false,
+              "scalePosition": "right",
+              "scaleMode": "Normal",
+              "fontFamily": "system-ui",
+              "fontSize": "12",
+              "noTimeScale": false,
+              "valuesTracking": "1",
+              "changeMode": "price-and-percent",
+              "lineWidth": 2
+            }
+            </script>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="note">✅ 이 페이지 URL을 노션에서 /임베드 하면 됩니다.</div>
+    <p style="opacity:.7;font-size:12px;margin-top:12px">
+      노션에서는 이 페이지 URL을 <b>/임베드</b> 하면 됩니다.
+    </p>
+  </div>
+</body>
+</html>
+
   </div>
 </body>
 </html>
