--- a/index.html
+++ b/index.html
@@ -1,132 +1,62 @@
-<!doctype html>
-<html lang="ko">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>US Indices Dashboard</title>
-  <style>
-    body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
-    .wrap { padding: 16px; }
-    h1 { font-size: 18px; margin: 0 0 12px; }
-    .grid { display: grid; grid-template-columns: repeat(3, minmax(0, 1fr)); gap: 12px; }
-    .card { border: 1px solid rgba(255,255,255,.12); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.04); }
-    .card .title { padding: 10px 12px; font-size: 13px; opacity: .85; border-bottom: 1px solid rgba(255,255,255,.08); }
-    .tv { height: 360px; }
-    @media (max-width: 1000px) { .grid { grid-template-columns: 1fr; } .tv { height: 320px; } }
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <h1>📈 US Indices</h1>
-
-    <div class="grid">
-      <div class="card">
-        <div class="title">NASDAQ Composite</div>
-        <div class="tv">
-          <div class="tradingview-widget-container" style="height:100%;width:100%">
-            <div class="tradingview-widget-container__widget" style="height:100%;width:100%"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
-            {
-              "symbols": [["NASDAQ:IXIC|1D"]],
-              "chartOnly": false,
-              "width": "100%",
-              "height": "100%",
-              "locale": "en",
-              "colorTheme": "dark",
-              "autosize": true,
-              "showVolume": true,
-              "showMA": false,
-              "hideDateRanges": false,
-              "hideMarketStatus": false,
-              "hideSymbolLogo": false,
-              "scalePosition": "right",
-              "scaleMode": "Normal",
-              "fontFamily": "system-ui",
-              "fontSize": "12",
-              "noTimeScale": false,
-              "valuesTracking": "1",
-              "changeMode": "price-and-percent",
-              "lineWidth": 2
-            }
-            </script>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="title">S&P 500</div>
-        <div class="tv">
-          <div class="tradingview-widget-container" style="height:100%;width:100%">
-            <div class="tradingview-widget-container__widget" style="height:100%;width:100%"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
-            {
-              "symbols": [["SP:SPX|1D"]],
-              "chartOnly": false,
-              "width": "100%",
-              "height": "100%",
-              "locale": "en",
-              "colorTheme": "dark",
-              "autosize": true,
-              "showVolume": true,
-              "showMA": false,
-              "hideDateRanges": false,
-              "hideMarketStatus": false,
-              "hideSymbolLogo": false,
-              "scalePosition": "right",
-              "scaleMode": "Normal",
-              "fontFamily": "system-ui",
-              "fontSize": "12",
-              "noTimeScale": false,
-              "valuesTracking": "1",
-              "changeMode": "price-and-percent",
-              "lineWidth": 2
-            }
-            </script>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="title">Dow Jones (DJIA)</div>
-        <div class="tv">
-          <div class="tradingview-widget-container" style="height:100%;width:100%">
-            <div class="tradingview-widget-container__widget" style="height:100%;width:100%"></div>
-            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
-            {
-              "symbols": [["TVC:DJI|1D"]],
-              "chartOnly": false,
-              "width": "100%",
-              "height": "100%",
-              "locale": "en",
-              "colorTheme": "dark",
-              "autosize": true,
-              "showVolume": true,
-              "showMA": false,
-              "hideDateRanges": false,
-              "hideMarketStatus": false,
-              "hideSymbolLogo": false,
-              "scalePosition": "right",
-              "scaleMode": "Normal",
-              "fontFamily": "system-ui",
-              "fontSize": "12",
-              "noTimeScale": false,
-              "valuesTracking": "1",
-              "changeMode": "price-and-percent",
-              "lineWidth": 2
-            }
-            </script>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <p style="opacity:.7;font-size:12px;margin-top:12px">
-      노션에서는 이 페이지 URL을 <b>/임베드</b> 하면 됩니다.
-    </p>
-  </div>
-</body>
-</html>
-
-  </div>
-</body>
-</html>
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/symbols/NASDAQ-IXIC/" rel="noopener nofollow" target="_blank"><span class="blue-text">IXIC</span></a><span class="comma">,</span>&nbsp;<a href="https://www.tradingview.com/symbols/SPREADEX-DJI/" rel="noopener nofollow" target="_blank"><span class="blue-text">DJI</span></a><span class="comma">,</span><span class="and">&nbsp;and&nbsp;</span><a href="https://www.tradingview.com/symbols/SPREADEX-SPX/" rel="noopener nofollow" target="_blank"><span class="blue-text">SPX quote</span></a><span class="trademark">&nbsp;by TradingView</span></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-symbol-overview.js" async>
+  {
+  "lineWidth": 2,
+  "lineType": 0,
+  "chartType": "area",
+  "fontColor": "rgb(106, 109, 120)",
+  "gridLineColor": "rgba(242, 242, 242, 0.06)",
+  "volumeUpColor": "rgba(34, 171, 148, 0.5)",
+  "volumeDownColor": "rgba(247, 82, 95, 0.5)",
+  "backgroundColor": "#0F0F0F",
+  "widgetFontColor": "#DBDBDB",
+  "upColor": "#22ab94",
+  "downColor": "#f7525f",
+  "borderUpColor": "#22ab94",
+  "borderDownColor": "#f7525f",
+  "wickUpColor": "#22ab94",
+  "wickDownColor": "#f7525f",
+  "colorTheme": "dark",
+  "isTransparent": false,
+  "locale": "en",
+  "chartOnly": false,
+  "scalePosition": "right",
+  "scaleMode": "Normal",
+  "fontFamily": "-apple-system, BlinkMacSystemFont, Trebuchet MS, Roboto, Ubuntu, sans-serif",
+  "valuesTracking": "1",
+  "changeMode": "price-and-percent",
+  "symbols": [
+    [
+      "NASDAQ:IXIC|1D"
+    ],
+    [
+      "SPREADEX:DJI|1D"
+    ],
+    [
+      "SPREADEX:SPX|1D"
+    ]
+  ],
+  "dateRanges": [
+    "1d|1",
+    "1m|30",
+    "3m|60",
+    "12m|1D",
+    "60m|1W",
+    "all|1M"
+  ],
+  "fontSize": "10",
+  "headerFontSize": "medium",
+  "autosize": true,
+  "width": "100%",
+  "height": "100%",
+  "noTimeScale": false,
+  "hideDateRanges": false,
+  "hideMarketStatus": false,
+  "hideSymbolLogo": false
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
